add files and sections

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 	</section>
 
 
-	<section class="contacts">
+	<section class="reviews">
 			<div class="container">
 			<img class="waves" src="pics/waves-copy.png">
 		<h3 class="clients_title">our clients say</h3>
@@ -281,21 +281,56 @@
 		</p>
 		</li>
 	</ul>
-			<form action="index_submit" method="get" accept-charset="utf-8">
-			</form>
+	</div>
+	</section>
+
+<section class="contacts">
+<div class="container">
+			 <div class="contacts_form">
+        <form name="login-form" class="login-form" action="" method="get">
+            <div class="header">
+                <h2 class="contacts-form-title">Contacts</h2>
+                <p class="contacts-form-text">Sign up for our newsletter to receive updates</p>
+            </div>
+            <ul class="contacts-form-content">
+                <li class="contacts-form-item">
+                <input name="username" 
+                	   type="text" 
+                	   class="input username" 
+                	   placeholder="Name"
+                	   /></li>
+                <li class="contacts-form-item">
+                <input name="phone" 
+                	   type="phone" 
+                	   class="input phone" 
+                	   placeholder="Phone" 
+                	   /></li>
+
+        	   <li class="contacts-form-item">
+        	   <input name="e-mail"
+        	   		  type="e-mail"
+        	   		  class="input email"
+        	   		  placeholder="E-mail"
+        	   		  /></li>
+        	   		  </ul>
+             <button class="home_order"><a class="order-button contacts-button" href="">send</a></button>
+        </form>
 			</div>
+		</div>
 	</section>
 
 	<footer>
 		<div class="container">
 		<ul class="footer_list">
-		<li class="footer_item">All rights reserved</li>
+		<li class="footer_item footer-text">All rights reserved</li>
 		<li class="footer_item">
-			<img class="footer-logo">
-			<img class="footer-logo">
-			<img class="footer-logo">
+		<ul>
+			<li class="footer-logo-box logo-box1"><img class="footer-logo" src="pics/twitter.png"></li>
+			<li class="footer-logo-box logo-box2"><img class="footer-logo" src="pics/fb-logo.png"></li>
+			<li class="footer-logo-box logo-box3"><img class="footer-logo" src="pics/vk.png"></li>
+		</ul>
 		</li>
-		<li class="footer_item">1 234 243 123</li>
+		<li class="footer_item footer-phone">1 234 243 123</li>
 	</ul>
 	</div>
 	</footer>
