--- a/index.html
+++ b/index.html
@@ -325,9 +325,9 @@
 		<li class="footer_item footer-text">All rights reserved</li>
 		<li class="footer_item">
 		<ul>
-			<li class="footer-logo-box logo-box1"><img class="footer-logo" src="pics/twitter.png"></li>
-			<li class="footer-logo-box logo-box2"><img class="footer-logo" src="pics/fb-logo.png"></li>
-			<li class="footer-logo-box logo-box3"><img class="footer-logo" src="pics/vk.png"></li>
+			<li class="footer-logo-box"><a href="" title=""><img class="footer-logo" src="pics/twitter.png"></a></li>
+			<li class="footer-logo-box"><a href="" title=""><img class="footer-logo" src="pics/fb.png"></a></li>
+			<li class="footer-logo-box"><a href="" title=""><img class="footer-logo" src="pics/vk.png"></a></li>
 		</ul>
 		</li>
 		<li class="footer_item footer-phone">1 234 243 123</li>
