add new files and sections

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="container">
 		<ul class="about_list">
 			<li class="about_item"> 
-			<img class="waves" src="pics/waves-copy.png">
+				<div class="waves-about"><img class="waves" src="pics/waves-copy.png"></div>
 				<h3 class="about_title">about us</h3>
 				<p class="about_text"> 
 						Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -55,7 +55,7 @@
 				<button class="read-more"> read more</button>
 			</li>
 			<li class="about_item">
-				<img class="img1" src="img/16047839768-3d53d0b471-z.png" alt="boots">
+				<img class="img1" src="img/16047839768-3d53d0b471-z.jpg" alt="boots">
 			</li>
 			<li class="about_item">
 				<img class="img2" src="img/curves-3.png" alt="selfie">
@@ -67,7 +67,7 @@
 
 <section class="journal">
 	<div class="container">
- <img class="waves" src="pics/waves-copy.png">
+		<div class="waves-journal"><img class="waves" src="pics/waves-copy.png"></div>
 		<h2 class="journal_title"> our journal </h2>
 		<ul class="journal_list">
 			<li class="journal_item item_1">
@@ -75,11 +75,11 @@
 			</li>
 			<li class="journal_item">
 				<h5 class="item_title"> love </h5>
-				<h4 class="item_head">Duis aute irure dolor in reprehenderit</h4>
-				<p> 
-				Lorem ipsum dolor sit amet, 
-				consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt</p>
+				<h4 class="item_head">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</h4>
+				<p class="journal-item-text"> 
+				You know how to make best coffee in the universe? Or, maybe you’re very good in designing gloves? Tell everyone about your experience and skills.
+				</p>
+				<p class="journal-number"><i>01</i></p>
 			</li>
 			<li class="journal_item item_2">
 				<img src="img/drop.png" alt="">
@@ -87,22 +87,20 @@
 
 			<li class="journal_item">
 				<h5 class="item_title"> tree </h5>
-				<h4 class="item_head">Duis aute irure dolor in reprehenderit</h4>
-				<p> 
-				Lorem ipsum dolor sit amet, 
-				consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt</p>
+				<h4 class="item_head">Lorem ipsum dolor sit amet, <s>consectetur</s> adipisicing elit,</h4>
+				<p class="journal-item-text"> 
+				The way to a successful brand is hard, but always very interesting. Share the full story of your project – from the very first day until now.</p>
+				<p class="journal-number"><i>02</i></p>
 			</li>
 			<li class="journal_item item_3">
 				<img src="img/leaf.png" alt="">
 			</li>
 			<li class="journal_item">
 				<h5 class="item_title"> water </h5>
-				<h4 class="item_head">Duis aute irure dolor in reprehenderit</h4>
-				<p> 
-				Lorem ipsum dolor sit amet, 
-				consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt</p>
+				<h4 class="item_head">LITTLE PIECES OF OUR PROUDNESS</h4>
+				<p class="journal-item-text"> 
+				What do you do better than your competitors? What are you proud of? What details and advantages of your product you want people to know about?</p>
+				<p class="journal-number"><i>03</i></p>
 			</li>
 		</ul>
 	</div>
@@ -111,7 +109,7 @@
 
 	<section class="order">
 			<div class="container">
-			<img class="waves" src="pics/waves-copy.png">
+				<div class="waves-order"><img class="waves" src="pics/waves-copy.png"></div>
 				<h3 class="order_title"> do you wanna go? </h3>
 				
 				<p class="order_text"> 
@@ -119,11 +117,14 @@
 				</p>
 				<ul class="order_list">
 					<li class="order_item">
-					<form class="order_name" action="index_submit" method="get" accept-charset="utf-8">Your name</form>
+					<form class="order_name" action="index_submit" method="get" accept-charset="utf-8">
+						<input name="Name" placeholder="Your name:">
+					</form>
 					</li>
-
 					<li class="order_item">
-					<form class="order_phone" action="index_submit" method="get" accept-charset="utf-8"> Your phone</form>
+					<form class="order_phone" action="index_submit" method="get" accept-charset="utf-8"> 
+					<input name="Phone" placeholder="Your phone:">
+					</form>
 					</li>
 					<li class="order_item">
 					<button class="home_order"><a class="order-button" href="">order now</a></button>
@@ -137,34 +138,38 @@
 
 	<section class="service">
 			<div class="container">
-			<img class="waves" src="pics/waves-copy.png">
+				<div class="waves-service"><img class="waves" src="pics/waves-copy.png"></div>
 				<h2 class="service_title">how we work</h2>
 				<ul class="service_list">
 
-				<li class="service_item">
-					<img class="service-icon" src="" alt="">
-					<img class="service_icon_2" src="" alt="">
+				<li class="service_item"> 
+					<div class="service_number">1</div>
+					<div class="service-icon">
+						<img class="service_icon_2" src="" alt=""></div>
 					<p class="service-text">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
 				</li>
 
-				<li class="service_item">
-					<img class="service-icon" src="" alt="">
-					<img class="service_icon_2" src="" alt="">
+				<li class="service_item"> 
+				<div class="service_number">2</div>
+					
+						<div class="service-icon"><img class="service_icon_2" src="" alt=""> </div>
 					<p class="service-text">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
 				</li>
 
-				<li class="service_item">
-					<img class="service-icon" src="" alt="">
-					<img class="service_icon_2" src="" alt="">
+				<li class="service_item"> 
+					<div class="service_number">3</div>
+					<div class="service-icon">
+						<img class="service_icon_2" src="" alt=""></div>
 					<p class="service-text">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
 				</li>
 
-				<li class="service_item">
-					<img class="service-icon" src="" alt="">
-					<img class="service_icon_2" src="" alt="">
+				<li class="service_item"> 
+					<div class="service_number">4</div>
+					<div class="service-icon">
+						<img class="service_icon_2" src="" alt=""></div>
 					<p class="service-text">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
 				</li>
@@ -176,7 +181,7 @@
 
 	<section class="price">
 			<div class="container">
-			<img class="waves" src="pics/waves-copy.png">
+				<div class="price-waves"><img class="waves" src="pics/waves-copy.png"></div>
 				<h2 class="price_title">travel with us</h2>
 			<ul class="price_list">
 				<li class="price_item price-carpathian">
@@ -204,7 +209,7 @@
 
 	<section class="gallery">
 			<div class="container">
-			<img class="waves" src="pics/waves-copy.png">
+				<div class="waves-gallery"><img class="waves" src="pics/waves-copy.png"></div>
 				<h2 class="gallery_title">gallery</h2>
 				<ul class="gallery_list">
 				<li class="gallery-item gallery-block1">
@@ -255,7 +260,7 @@
 
 	<section class="reviews">
 			<div class="container">
-			<img class="waves" src="pics/waves-copy.png">
+				<div class="waves-reviews"><img class="waves" src="pics/waves-copy.png"></div>
 		<h3 class="clients_title">our clients say</h3>
 		<ul class="clients-say">
 		<li class="clients-say-item">
