--- a/index.html
+++ b/index.html
@@ -140,12 +140,16 @@
 			<div class="container">
 				<div class="waves-service"><img class="waves" src="pics/waves-copy.png"></div>
 				<h2 class="service_title">how we work</h2>
+				<div class="dotted-shape">
+					<div class="dotted-lines"> </div>
+					</div>
 				<ul class="service_list">
 
 				<li class="service_item"> 
 					<div class="service_number">1</div>
 					<div class="service-icon">
-						<img class="service_icon_2" src="" alt=""></div>
+					<div class="service-polygon">
+						<img class="service_icon_2" src="pics/1.png" alt=""></div></div>
 					<p class="service-text">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
 				</li>
@@ -153,7 +157,8 @@
 				<li class="service_item"> 
 				<div class="service_number">2</div>
 					
-						<div class="service-icon"><img class="service_icon_2" src="" alt=""> </div>
+						<div class="service-icon">
+							<div class="service-polygon"><img class="service_icon_2" src="pics/7.png" alt=""> </div></div>
 					<p class="service-text">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
 				</li>
@@ -161,7 +166,8 @@
 				<li class="service_item"> 
 					<div class="service_number">3</div>
 					<div class="service-icon">
-						<img class="service_icon_2" src="" alt=""></div>
+					<div class="service-polygon">
+						<img class="service_icon_2" src="pics/3.png" alt=""></div></div>
 					<p class="service-text">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
 				</li>
@@ -169,7 +175,8 @@
 				<li class="service_item"> 
 					<div class="service_number">4</div>
 					<div class="service-icon">
-						<img class="service_icon_2" src="" alt=""></div>
+					<div class="service-polygon">
+						<img class="service_icon_2" src="pics/4.png" alt=""></div></div>
 					<p class="service-text">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
 				</li>
@@ -184,20 +191,20 @@
 				<div class="price-waves"><img class="waves" src="pics/waves-copy.png"></div>
 				<h2 class="price_title">travel with us</h2>
 			<ul class="price_list">
-				<li class="price_item price-carpathian">
-					<img class='price-item-img' src="img/carpathian.png">
+				<li class="price_item price-carpathian"> 
+				<img class="price-img" src="img/carpathian.png" alt="">
 				</li>
 				<li class="price_item price-alps">
-					<img class='price-item-img' src="img/alps.png">
+				<img class="price-img" src="img/alps.png" alt="">
 				</li>
 				<li class="price_item price-pyrenees">
-					<img class='price-item-img' src="img/pyrenees.png">
+				<img class="price-img" src="img/pyrenees.png" alt="">
 				</li>
 				<li class="price_item price-rocky">
-					<img class='price-item-img' src="img/rocky.png">
+				<img class="price-img" src="img/rocky.png" alt="">
 				</li>
 				<li class="price_item price-kavkaz">
-					<img class='price-item-img' src="img/kavkaz.png">
+				<img class="price-img" src="img/kavkaz.png" alt="">
 				</li>
 			</ul>
 			</div>
@@ -300,7 +307,7 @@
             <ul class="contacts-form-content">
                 <li class="contacts-form-item">
                 <input name="username" 
-                	   type="text" 
+                	   type="text"
                 	   class="input username" 
                 	   placeholder="Name"
                 	   /></li>
