--- a/index.html
+++ b/index.html
@@ -148,37 +148,27 @@
 				<li class="service_item"> 
 					<div class="service_number">1</div>
 					<div class="service-icon">
-					<div class="service-polygon">
-						<img class="service_icon_2" src="pics/1.png" alt=""></div></div>
-					<p class="service-text">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+					
+						<img class="service_icon_2" src="pics/1.png" alt=""></div>
 				</li>
 
 				<li class="service_item"> 
 				<div class="service_number">2</div>
 					
 						<div class="service-icon">
-							<div class="service-polygon"><img class="service_icon_2" src="pics/7.png" alt=""> </div></div>
-					<p class="service-text">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+							<img class="service_icon_2" src="pics/2.png" alt=""></div>
 				</li>
 
 				<li class="service_item"> 
 					<div class="service_number">3</div>
 					<div class="service-icon">
-					<div class="service-polygon">
-						<img class="service_icon_2" src="pics/3.png" alt=""></div></div>
-					<p class="service-text">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+						<img class="service_icon_2" src="pics/3.png" alt=""></div>
 				</li>
 
 				<li class="service_item"> 
 					<div class="service_number">4</div>
 					<div class="service-icon">
-					<div class="service-polygon">
-						<img class="service_icon_2" src="pics/4.png" alt=""></div></div>
-					<p class="service-text">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+						<img class="service_icon_2" src="pics/4.png" alt=""></div>
 				</li>
 			</ul>
 
@@ -192,19 +182,19 @@
 				<h2 class="price_title">travel with us</h2>
 			<ul class="price_list">
 				<li class="price_item price-carpathian"> 
-				<img class="price-img" src="img/carpathian.png" alt="">
+				<img class="price-img" src="img/1.png" alt="">
 				</li>
 				<li class="price_item price-alps">
-				<img class="price-img" src="img/alps.png" alt="">
+				<img class="price-img" src="img/2.png" alt="">
 				</li>
 				<li class="price_item price-pyrenees">
-				<img class="price-img" src="img/pyrenees.png" alt="">
+				<img class="price-img" src="img/3.png" alt="">
 				</li>
 				<li class="price_item price-rocky">
-				<img class="price-img" src="img/rocky.png" alt="">
+				<img class="price-img" src="img/4.png" alt="">
 				</li>
 				<li class="price_item price-kavkaz">
-				<img class="price-img" src="img/kavkaz.png" alt="">
+				<img class="price-img" src="img/5.png" alt="">
 				</li>
 			</ul>
 			</div>
