update about section

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 						cillum dolore eu fugiat nulla pariatur Excepteur sint occaecat cupidatat non proident, sunt in culpa </p>
 				<button class="read-more"> read more</button>
 			</li>
-			<li class="about_item">
+			<li class="about_item about_item_1">
 				<img class="img1" src="img/16047839768-3d53d0b471-z.jpg" alt="boots">
 			</li>
-			<li class="about_item">
+			<li class="about_item about_item_2">
 				<img class="img2" src="img/curves-3.png" alt="selfie">
 			</li>
 		</ul>
