--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 
 <div class="wrap">
 
-<section class="home">
+	<section class="home"><a name="home"></a>
 <img class="home_shadow" src="pics/rectangle-49.png">
 		<div class="container">
 			<div class="home_menu clearfix">
 				<h4 class="home_logo">Moun<span>tains</span></h4>
 				<ul class="menu-list">
-					<li class="menu-item"><a href="">Our Story</a></li>
-					<li class="menu-item"><a href="">Services</a></li> 
-					<li class="menu-item"><a href="">Work</a></li>
-					<li class="menu-item"><a href="">Journal</a></li>
-					<li class="menu-item"><a href="">Contact</a></li>
-					<li class="menu-item"><a href="">Work</a></li>
-					<li class="menu-item"><a href="">Journal</a></li>
+					<li class="menu-item"><a href="#about">Our Story</a></li>
+					<li class="menu-item"><a href="#services">Services</a></li> 
+					<li class="menu-item"><a href="#work">Work</a></li>
+					<li class="menu-item"><a href="#journal">Journal</a></li>
+					<li class="menu-item"><a href="#contacts">Contacts</a></li>
+					<li class="menu-item"><a href="#work">Work</a></li>
+					<li class="menu-item"><a href="#journal">Journal</a></li>
 				</ul>
-					<button class="call"><a class="menu-button" href="#">call us</a></button>
+					<button class="call"><a class="menu-button" href="#contacts">call us</a></button>
 		</div>
 
 		<div class="home_content">
@@ -34,7 +34,7 @@
 			<h2 class="home_logo logo-home"> to the Mountains </h2>
 			<p class="logo-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 			Repudiandae porro omnis ex fugit </p>
-			<button class="home_order"><a class="order-button" href="">order now</a></button>
+			<button class="home_order"><a class="order-button" href="#order">order now</a></button>
 		</div>
 		</div>
 			</div>
@@ -43,7 +43,7 @@
 
 
 
-<section class="about">
+	<section class="about"><a name="about"</a>
 	<div class="container">
 		<ul class="about_list">
 			<li class="about_item"> 
@@ -54,10 +54,10 @@
 						cillum dolore eu fugiat nulla pariatur Excepteur sint occaecat cupidatat non proident, sunt in culpa </p>
 				<button class="read-more"> read more</button>
 			</li>
-			<li class="about_item about_item_1">
+			<li class="about_item">
 				<img class="img1" src="img/16047839768-3d53d0b471-z.jpg" alt="boots">
 			</li>
-			<li class="about_item about_item_2">
+			<li class="about_item">
 				<img class="img2" src="img/curves-3.png" alt="selfie">
 			</li>
 		</ul>
@@ -65,7 +65,7 @@
 </section>
 
 
-<section class="journal">
+	<section class="journal"> <a name="journal"></a>
 	<div class="container">
 		<div class="waves-journal"><img class="waves" src="pics/waves-copy.png"></div>
 		<h2 class="journal_title"> our journal </h2>
@@ -107,7 +107,7 @@
 </section>
 
 
-	<section class="order">
+	<section class="order"><a name="order"></a>
 			<div class="container">
 				<div class="waves-order"><img class="waves" src="pics/waves-copy.png"></div>
 				<h3 class="order_title"> do you wanna go? </h3>
@@ -116,18 +116,18 @@
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 				</p>
 				<ul class="order_list">
-					<li class="order_item">
+					<li class="order_item order_item_name">
 					<form class="order_name" action="index_submit" method="get" accept-charset="utf-8">
 						<input name="Name" placeholder="Your name:">
 					</form>
 					</li>
-					<li class="order_item">
+					<li class="order_item order_item_phone">
 					<form class="order_phone" action="index_submit" method="get" accept-charset="utf-8"> 
 					<input name="Phone" placeholder="Your phone:">
 					</form>
 					</li>
-					<li class="order_item">
-					<button class="home_order"><a class="order-button" href="">order now</a></button>
+					<li class="order_item order_item_button">
+					<button class="home_order"><a class="order-button" href="#order">order now</a></button>
 					</li>
 			</ul>
 			<p class="order_note"> * Your data will not be transferred </p>
@@ -136,7 +136,7 @@
 
 
 
-	<section class="service">
+	<section class="service"><a name="services"></a>
 			<div class="container">
 				<div class="waves-service"><img class="waves" src="pics/waves-copy.png"></div>
 				<h2 class="service_title">how we work</h2>
@@ -204,27 +204,31 @@
 	</section>
 
 
-	<section class="gallery">
-			<div class="container">
-				<div class="waves-gallery"><img class="waves" src="pics/waves-copy.png"></div>
-				<h2 class="gallery_title">gallery</h2>
-				<ul class="gallery_list">
-				<li class="gallery-item gallery-block1">
-				<a class="gallery-link" href="" title=""><img class="gallery-item-img1" src="img/gallery-1.png"></a>
-				<a class="gallery-link" href="" title=""><img class="gallery-item-img4" src="img/gallery-4.png"></a>
-				</li>
-				<li class="gallery-item gallery-block2">
-				<a class="gallery-link" href="" title=""><img class="gallery-item-img2" src="img/gallery-2.png"></a>
-				<a class="gallery-link" href="" title=""><img class="gallery-item-img5" src="img/gallery-5.png"></a>
-				</li>
-				<li class="gallery-item gallery-block3">
-				<a class="gallery-link" href="" title=""><img class="gallery-item-img3" src="img/gallery-3.png"></a>
-				<a class="gallery-link" href="" title=""><img class="gallery-item-img6" src="img/gallery-6.png"></a>
-				</li>
-			</ul>
-			
-
-
+<section class="gallery">
+	<div class="container">
+		<div class="waves-gallery"><img class="waves" src="pics/waves-copy.png"></div>
+			<h2 class="gallery_title">gallery</h2>
+				<ul class="gallery_list gallery_animation">
+						<li class="gallery-item gallery-block1">
+							<a class="gallery-link" href="" title="">
+								<img class="gallery-item-img1" src="img/gallery-1.png"></a>
+							<a class="gallery-link" href="" title="">
+								<img class="gallery-item-img4" src="img/gallery-4.png"></a>
+						</li>
+						<li class="gallery-item gallery-block2">
+								<a class="gallery-link" href="" title="">
+									<img class="gallery-item-img2" src="img/gallery-2.png">
+								</a>
+								<a class="gallery-link" href="" title="">
+									<img class="gallery-item-img5" src="img/gallery-5.png"></a>
+						</li>
+							<li class="gallery-item gallery-block3">
+								<a class="gallery-link" href="" title="">
+									<img class="gallery-item-img3" src="img/gallery-3.png"></a>
+								<a class="gallery-link" href="" title="">
+									<img class="gallery-item-img6" src="img/gallery-6.png"></a>
+							</li>
+					</ul>
 			</div>
 	</section>
 
@@ -286,7 +290,7 @@
 	</div>
 	</section>
 
-<section class="contacts">
+	<section class="contacts"><a name="contacts"></a>
 <div class="container">
 			 <div class="contacts_form">
         <form name="login-form" class="login-form" action="" method="get">
@@ -315,7 +319,7 @@
         	   		  placeholder="E-mail"
         	   		  /></li>
         	   		  </ul>
-             <button class="home_order"><a class="order-button contacts-button" href="">send</a></button>
+             <button class="home_order"><a class="order-button contacts-button" href="#order">send</a></button>
         </form>
 			</div>
 		</div>
@@ -327,9 +331,9 @@
 		<li class="footer_item footer-text">All rights reserved</li>
 		<li class="footer_item">
 		<ul>
-			<li class="footer-logo-box"><a href="" title=""><img class="footer-logo" src="pics/twitter.png"></a></li>
-			<li class="footer-logo-box"><a href="" title=""><img class="footer-logo" src="pics/fb.png"></a></li>
-			<li class="footer-logo-box"><a href="" title=""><img class="footer-logo" src="pics/vk.png"></a></li>
+			<li class="footer-logo-box"><a href="https//www.twitter.com" title=""><img class="footer-logo" src="pics/twitter.png"></a></li>
+			<li class="footer-logo-box"><a href="https//www.facebook.com" title=""><img class="footer-logo" src="pics/fb.png"></a></li>
+			<li class="footer-logo-box"><a href="https//www.vk.com" title=""><img class="footer-logo" src="pics/vk.png"></a></li>
 		</ul>
 		</li>
 		<li class="footer_item footer-phone">1 234 243 123</li>
