--- a/index.html
+++ b/index.html
@@ -149,26 +149,38 @@
 					<div class="service_number">1</div>
 					<div class="service-icon">
 					
-						<img class="service_icon_2" src="pics/1.png" alt=""></div>
+						<img class="service_icon_2" src="pics/3-layers-1.png.png" alt=""/>
+						<h6 class="servis-item-title"> Lorem ipsum dolor sit </h6>
+						<p class="service-text">amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+						</div>
 				</li>
 
 				<li class="service_item"> 
 				<div class="service_number">2</div>
 					
 						<div class="service-icon">
-							<img class="service_icon_2" src="pics/2.png" alt=""></div>
+							<img class="service_icon_2" src="pics/3-layers-2.png.png" alt=""/>
+							<h6 class="servis-item-title"> Lorem ipsum dolor sit </h6>
+							<p class="service-text">amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+							</div>
 				</li>
 
 				<li class="service_item"> 
 					<div class="service_number">3</div>
 					<div class="service-icon">
-						<img class="service_icon_2" src="pics/3.png" alt=""></div>
+						<img class="service_icon_2" src="pics/3-layers-3.png.png" alt=""/>
+						<h6 class="servis-item-title"> Lorem ipsum dolor sit </h6>
+						<p class="service-text">amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+						</div>
 				</li>
 
 				<li class="service_item"> 
 					<div class="service_number">4</div>
 					<div class="service-icon">
-						<img class="service_icon_2" src="pics/4.png" alt=""></div>
+						<img class="service_icon_2" src="pics/3-layers.png.png" alt=""/>
+						<h6 class="servis-item-title"> Lorem ipsum dolor sit </h6>
+						<p class="service-text">amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+						</div>
 				</li>
 			</ul>
 
@@ -208,21 +220,21 @@
 	<div class="container">
 		<div class="waves-gallery"><img class="waves" src="pics/waves-copy.png"></div>
 			<h2 class="gallery_title">gallery</h2>
-				<ul class="gallery_list gallery_animation">
-						<li class="gallery-item gallery-block1">
+				<ul class="gallery_list gallery_animation gallery-responsive __col-3 ">
+						<li class="gallery-responsive-item gallery-block1">
 							<a class="gallery-link" href="" title="">
 								<img class="gallery-item-img1" src="img/gallery-1.png"></a>
 							<a class="gallery-link" href="" title="">
 								<img class="gallery-item-img4" src="img/gallery-4.png"></a>
 						</li>
-						<li class="gallery-item gallery-block2">
+						<li class="gallery-responsive-item gallery-block2">
 								<a class="gallery-link" href="" title="">
 									<img class="gallery-item-img2" src="img/gallery-2.png">
 								</a>
 								<a class="gallery-link" href="" title="">
 									<img class="gallery-item-img5" src="img/gallery-5.png"></a>
 						</li>
-							<li class="gallery-item gallery-block3">
+							<li class="gallery-responsive-item gallery-block3">
 								<a class="gallery-link" href="" title="">
 									<img class="gallery-item-img3" src="img/gallery-3.png"></a>
 								<a class="gallery-link" href="" title="">
