--- a/index.html
+++ b/index.html
@@ -5,45 +5,65 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/reset.css">
 <link rel="stylesheet" type="text/css" href="css/fonts.css">
+<link rel="stylesheet" type="text/css" href="css/media.css">
 	<title>Mountains</title>
 </head>
 <body>
 
 <div class="wrap">
 
-	<section class="home"><a name="home"></a>
-<img class="home_shadow" src="pics/rectangle-49.png">
+<section class="home"><a name="home"></a>
+	<img class="home_shadow" src="pics/rectangle-49.png">
 		<div class="container">
 			<div class="home_menu clearfix">
 				<h4 class="home_logo">Moun<span>tains</span></h4>
-				<ul class="menu-list">
-					<li class="menu-item"><a href="#about">Our Story</a></li>
-					<li class="menu-item"><a href="#services">Services</a></li> 
-					<li class="menu-item"><a href="#work">Work</a></li>
-					<li class="menu-item"><a href="#journal">Journal</a></li>
-					<li class="menu-item"><a href="#contacts">Contacts</a></li>
-					<li class="menu-item"><a href="#work">Work</a></li>
-					<li class="menu-item"><a href="#journal">Journal</a></li>
-				</ul>
-					<button class="call"><a class="menu-button" href="#contacts">call us</a></button>
+					<ul class="menu-list">
+						<li class="menu-item">
+								<a href="#about">Our Story</a>
+								</li>
+						<li class="menu-item">
+								<a href="#services">Services</a>
+								</li> 
+						<li class="menu-item">
+								<a href="#work">Work</a>
+								</li>
+						<li class="menu-item">
+								<a href="#journal">Journal</a>
+								</li>
+						<li class="menu-item">
+								<a href="#contacts">Contacts</a>
+								</li>
+						<li class="menu-item">
+								<a href="#work">Work</a></li>
+
+						<li class="menu-item">
+								<a href="#journal">Journal</a>
+								</li>
+					</ul>
+						<button class="call">
+							<a class="menu-button" href="#contacts">call us</a>
+						</button>
 		</div>
 
-		<div class="home_content">
-		<div class="home_title">
-			<h1 class="title"> Travel with us </h1>
+<div class="home_content">
+	<div class="home_title">
+		<h1 class="title"> Travel with us </h1>
 			<h2 class="home_logo logo-home"> to the Mountains </h2>
-			<p class="logo-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-			Repudiandae porro omnis ex fugit </p>
-			<button class="home_order"><a class="order-button" href="#order">order now</a></button>
-		</div>
-		</div>
-			</div>
+				<p class="logo-text"> 
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae porro omnis ex fugit 
+				</p>
+			<button class="home_order">
+				<a class="order-button" href="#order">order now</a>
+			</button>
+	</div>
+</div>
+</div>
 </section>
 
 
 
 
-	<section class="about"><a name="about"</a>
+<section class="about"><a name="about"></a>
 	<div class="container">
 		<ul class="about_list">
 			<li class="about_item"> 
@@ -149,7 +169,7 @@
 					<div class="service_number">1</div>
 					<div class="service-icon">
 					
-						<img class="service_icon_2" src="pics/3-layers-1.png.png" alt=""/>
+						<img class="service_icon_2" src="pics/3-layers-1.png" alt=""/>
 						<h6 class="servis-item-title"> Lorem ipsum dolor sit </h6>
 						<p class="service-text">amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
 						</div>
@@ -159,7 +179,7 @@
 				<div class="service_number">2</div>
 					
 						<div class="service-icon">
-							<img class="service_icon_2" src="pics/3-layers-2.png.png" alt=""/>
+							<img class="service_icon_2" src="pics/3-layers-2.png" alt=""/>
 							<h6 class="servis-item-title"> Lorem ipsum dolor sit </h6>
 							<p class="service-text">amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
 							</div>
@@ -168,7 +188,7 @@
 				<li class="service_item"> 
 					<div class="service_number">3</div>
 					<div class="service-icon">
-						<img class="service_icon_2" src="pics/3-layers-3.png.png" alt=""/>
+						<img class="service_icon_2" src="pics/3-layers-3.png" alt=""/>
 						<h6 class="servis-item-title"> Lorem ipsum dolor sit </h6>
 						<p class="service-text">amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
 						</div>
@@ -177,7 +197,7 @@
 				<li class="service_item"> 
 					<div class="service_number">4</div>
 					<div class="service-icon">
-						<img class="service_icon_2" src="pics/3-layers.png.png" alt=""/>
+						<img class="service_icon_2" src="pics/3-layers.png" alt=""/>
 						<h6 class="servis-item-title"> Lorem ipsum dolor sit </h6>
 						<p class="service-text">amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
 						</div>
