--- a/index.html
+++ b/index.html
@@ -21,46 +21,38 @@
 				<h4 class="home_logo">Moun<span>tains</span></h4>
 					<ul class="menu-list">
 						<li class="menu-item">
-							<a href="#about">Our Story</a>
-						</li>
+							<a href="#about">Our Story</a></li>
 						<li class="menu-item">
-							<a href="#services">Services</a>
-						</li> 
-						<li class="menu-item">
-							<a href="#work">Work</a>
-						</li>
-						<li class="menu-item">
-							<a href="#journal">Journal</a>
-						</li>
-						<li class="menu-item">
-							<a href="#contacts">Contacts</a>
-						</li>
+							<a href="#services">Services</a></li> 
 						<li class="menu-item">
 							<a href="#work">Work</a></li>
-
 						<li class="menu-item">
-							<a href="#journal">Journal</a>
-						</li>
+							<a href="#journal">Journal</a></li>
+						<li class="menu-item">
+							<a href="#contacts">Contacts</a></li>
+						<li class="menu-item">
+							<a href="#work">Work</a></li>
+						<li class="menu-item">
+							<a href="#journal">Journal</a></li>
 					</ul>
 							<button class="call">
 								<a class="menu-button" href="#contacts">call us</a>
 							</button>
-		    </div>
+								</div>
 
 	<div class="home_content clearfix">
 		<div class="home_title">
 			<h1 class="title"> Travel with us </h1>
 				<h2 class="home_logo logo-home"> to the Mountains </h2>
 					<p class="logo-text"> 
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae porro omnis ex fugit 
-					</p>
-						<button class="home_order">
-							<a class="order-button" href="#order">order now</a>
-						</button>
-		</div>
-	</div>
-</div>
-</section>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae porro omnis ex fugit </p>
+							<button class="home_order">
+								<a class="order-button" href="#order">order now</a>
+							</button>
+								</div>
+									</div>
+										</div>
+											</section>
 
 
 
@@ -240,7 +232,7 @@
 	<div class="container">
 		<div class="waves-gallery"><img class="waves" src="pics/waves-copy.png"></div>
 			<h2 class="gallery_title">gallery</h2>
-				<ul class="gallery_list gallery_animation gallery-responsive __col-3 ">
+				<ul class="gallery_list ">
 						<li class="gallery-responsive-item gallery-block1">
 							<a class="gallery-link" href="" title="">
 								<img class="gallery-item-img1" src="img/gallery-1.png"></a>
