--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 						<li class="menu-item">
 							<a href="#journal">Journal</a></li>
 					</ul>
-							<button class="call">
-								<a class="menu-button" href="#contacts">call us</a>
-							</button>
-								</div>
+			<button class="call">
+				<a class="menu-button" href="#contacts">call us</a>
+			</button>
+		</div>
 
 	<div class="home_content clearfix">
 		<div class="home_title">
@@ -114,7 +114,7 @@
 					</li>
 					<li class="journal_item">
 						<h5 class="item_title"> water </h5>
-							<h4 class="item_head">LITTLE PIECES OF OUR PROUDNESS</h4>
+							<h4 class="item_head">little pieces of our proudness</h4>
 								<p class="journal-item-text"> 
 									What do you do better than your competitors? What are you proud of? What details and advantages of your product you want people to know about?</p>
 										<p class="journal-number"><i>03</i></p>
@@ -373,7 +373,7 @@
 
 <script>
 	$(window).scroll(function() {
-		$('#price-animation').each(function(){
+		$('#title').each(function(){
 		var imagePos = $(this).offset().top;
 
 		var topOfWindow = $(window).scrollTop();
